fix mobile view

--- a/personalweb.html
+++ b/personalweb.html
@@ -182,8 +182,7 @@
                 <img src="images/financialdashboard.png" id='financialdashboard' width="800px" class="figure-img p-0 m-0" alt="Financial Dashboard">
                 <figcaption class="figure-caption p-5 text-white">
                     <h4>Financial Dashboard</h4>
-                    A financial dashboard holding the latest economic data and also a stock trend predictor!
-                    <br/>
+                    <p>A financial dashboard holding the latest economic data and also a stock trend predictor!</p>
                     <br/>
                     <br/>
                     <button type="button" class="btn btn-secondary" onclick="window.open('https://erickim0223-stockpredictor-app-752ms5.streamlit.app/')">
@@ -205,8 +204,7 @@
                 <img src="images/personalwebsite.png" id='personalwebsite' width="800px" class="figure-img p-0 m-0" alt="Personal Website">
                 <figcaption class="figure-caption p-5 text-white">
                     <h4>Personal Website</h4>
-                    A website for introducing me and showcasing some of my projects
-                    <br/>
+                    <p>A website for introducing me and showcasing some of my projects</p>
                     <br/>
                     <br/>
                     <button type="button" class="btn btn-secondary" onclick="window.open('https://github.com/erickim0223/personalwebsite')">
@@ -222,8 +220,7 @@
                 <img src="images/dbinterface.png" id='dbinterface' width="800px" class="figure-img p-0 m-0" alt="Database Interface">
                 <figcaption class="figure-caption p-5 text-white">
                     <h4>Database Interface</h4>
-                    A simple interface for a database holding customer and order data
-                    <br/>
+                    <p>A simple interface for a database holding customer and order data</p>
                     <br/>
                     <br/>
                     <button type="button" class="btn btn-secondary" onclick="window.open('https://erick.sgedu.site/databaseinterface/interface.php')">
