--- a/personalweb.html
+++ b/personalweb.html
@@ -108,11 +108,11 @@
                     <div class="underline"></div>
                     <br/>
                     <p>
-                        Hello, my name is Eric and I'm a motivated computer science student with experience in full stack development. I'm skilled in multiple programming languages and have a proven track record of boosting efficiency and improving processes.
+                        Hello, my name is Eric and full-stack software developer with a year of experience utilizing the .NET framework. I'm skilled in multiple programming languages and have a proven track record of boosting efficiency and improving processes.
                     </p>
                     <br/>
                     <p>
-                        I'm seeking opportunities in full stack development and software engineering, and I'm open to learning new technologies.
+                        I'm seeking opportunities in full stack development and software engineering, and I'm always open to learning new technologies.
                     </p>
                     <br/>
                     <p>
