--- a/personalweb.html
+++ b/personalweb.html
@@ -119,7 +119,7 @@
                         I hope to hear back from you, and here is my resume for more information about me.
                     </p>
                     <br/>
-                    <button type="button" class="btn btn-outline-light" onclick="location.replace('resume2.pdf')">Resume</button>
+                    <button type="button" class="btn btn-outline-light" onclick="location.replace('resume.pdf')">Resume</button>
                 </div>
                 <div class="col-xl-1">
                     <img src="images/person.png" id="person" alt="personicon">
