--- a/personalweb.html
+++ b/personalweb.html
@@ -119,7 +119,7 @@
                         I hope to hear back from you, and here is my resume for more information about me.
                     </p>
                     <br/>
-                    <button type="button" class="btn btn-outline-light" onclick="location.replace('resume.pdf')">Resume</button>
+                    <button type="button" class="btn btn-outline-light" onclick="location.replace('Eric_G_Kim_Resume.pdf')">Resume</button>
                 </div>
                 <div class="col-xl-1">
                     <img src="images/person.png" id="person" alt="personicon">
@@ -138,34 +138,32 @@
                     <div class="col-xl-4">
                     <div class="myborder">
                         <h4>Programming Languages</h4>
+                        <p>C#</p>
+                        <p>SQL</p>
                         <p>HTML</p>
                         <p>CSS</p>
                         <p>JavaScript</p>
                         <p>Java</p>
-                        <p>Python</p>
-                        <p>PHP</p>
-                        <p>SQL</p>
                     </div>
                     </div>
                     <div class="col-xl-4">
                     <div class="myborder">
                         <h4>Frameworks/Technologies</h4>
+                        <p>.NET Framework</p>
                         <p>jQuery</p>
                         <p>AJAX</p>
-                        <p>XML</p>
                         <p>JSON</p>
-                        <p>Bootstrap</p>
+                        <p>XML</p>
+                        <p>LINQ</p>
                     </div>
                 </div>
                     <div class="col-xl-4">
                     <div class="myborder">
                         <h4>Other Tools</h4>
-                        <p>PostgreSQL</p>
-                        <p>MySQL</p>
-                        <p>pgAdmin</p>
-                        <p>Unix/Linux</p>
-                        <p>Git</p>
-                        <p>TortoiseSVN</p>
+                        <p>Microsoft SQL Server</p>
+                        <p>Git Extensions</p>
+                        <p>Azure DevOps</p>
+                        <p>TightVNC</p>
                     </div>
                 </div>
                 </div>
@@ -251,7 +249,7 @@
                         <p>201-249-4546</p>
                         <br/>
                         <h4>Email</h4>
-                        <p>Eric.Kim@tufts.edu</p>
+                        <p>erickim0223@yahoo.com</p>
                         </div>
                         <div class="col-md-8 offset-md-2 pt-5">
                         <form class="row g-3" action="https://erick.sgedu.site/sendemail.php" method="post" id="emailform" target="_blank">
