--- a/personalweb.html
+++ b/personalweb.html
@@ -251,8 +251,8 @@
                         <h4>Email</h4>
                         <p>erickim0223@yahoo.com</p>
                         </div>
-                        <div class="col-md-8 offset-md-2 pt-5">
-                        <form class="row g-3" action="https://erick.sgedu.site/sendemail.php" method="post" id="emailform" target="_blank">
+                        <div class="col-md-8 offset-md-2 pt-5"><form
+                        <form class="row g-3" action="https://formspree.io/erickim0223.yahoo.com" method="post" id="emailform" target="_blank">
                             <div class="col-md-6">
                                 <div class="input-group has-validation">
                                 <input type="name" class="form-control" id="validationname" placeholder="Name" name="name" required>
