--- a/personalweb.html
+++ b/personalweb.html
@@ -252,15 +252,15 @@
                         <p>erickim0223@yahoo.com</p>
                         </div>
                         <div class="col-md-8 offset-md-2 pt-5"><form
-                        <form class="row g-3" action="https://formspree.io/erickim0223.yahoo.com" method="post" id="emailform" target="_blank">
+                        <form class="row g-3" action="https://formspree.io/erickim0223@yahoo.com" method="post" id="emailform" target="_blank">
                             <div class="col-md-6">
                                 <div class="input-group has-validation">
-                                <input type="text" class="form-control" id="validationname" placeholder="Name" name="name" required>
+                                <input type="name" class="form-control" id="validationname" placeholder="Name" name="name" required>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="input-group has-validation">
-                                    <input type="email" class="form-control" id="validationemail" placeholder="Email" name="_replyto" required>
+                                    <input type="email" class="form-control" id="validationemail" placeholder="Email" name="email" required>
                                 </div>
                             </div>
                             <div class="col-12">
@@ -269,7 +269,7 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <input type="submit" class="btn btn-outline-light" value="Send">
+                                <button type="submit" class="btn btn-outline-light">Send</button>
                             </div>
                             </form>
                         </div>
