--- a/personalweb.html
+++ b/personalweb.html
@@ -108,7 +108,7 @@
                     <div class="underline"></div>
                     <br/>
                     <p>
-                        Hello, my name is Eric and full-stack software developer with a year of experience utilizing the .NET framework. I'm skilled in multiple programming languages and have a proven track record of boosting efficiency and improving processes.
+                        Hello, my name is Eric and I am a full-stack software developer with a year of experience utilizing the .NET framework. I'm skilled in multiple programming languages and have a proven track record of boosting efficiency and improving processes.
                     </p>
                     <br/>
                     <p>
