--- a/personalweb.html
+++ b/personalweb.html
@@ -249,7 +249,7 @@
                         <p>201-249-4546</p>
                         <br/>
                         <h4>Email</h4>
-                        <p>erickim0223@yahoo.com</p>
+                        <p>Eric.G.Kim@outlook.com</p>
                         </div>
                         <div class="col-md-8 offset-md-2 pt-5"><form
                         <form class="row g-3" action="https://formspree.io/f/mayrpeeb" method="post" id="emailform" target="_blank">
